--- a/public/accessDenied.html
+++ b/public/accessDenied.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <h1>Oops, there's a problem. You don't have access to these resources.</h1>
-    <p>If you don't have an account, create one. If you do, sign in.</p>
-    <p>Go to <a href="/login">Login</a>.</p>
+    <p>If you don't have an account, <a href="/register">create one</a>. If you do, <a href="/">sign in</a>.</p>
 </body>
 </html>
